[package]
name = "dupey-dupe"
version = "0.1.0"
authors = ["Nelson Torres <NelsonJTSM@gmail.com>"]
edition = "2018"
# autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"

# [[test]]
# name = "integration"
# path = "tests/lib.rs"